--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "bootstrap": "^5.1.3",
     "node": "^17.0.1",
+    "popper.js": "^1.16.1",
     "sass": "^1.43.4",
     "turbolinks": "^5.2.0"
   },
